--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codestar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/siddharthbudgude/siddharth-b.git",
+  "homepage": "https://github.com/siddharthbudgude/siddharth-b",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
