--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "swiper": "^11.2.2",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
+"scripts": {
+  "start": "react-scripts start",
+  "build": "cross-env CI=false react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "cross-env CI=false react-scripts build",
+  "deploy": "gh-pages -d build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.27.0"
+    "cross-env": "^10.1.0"
   }
-
 }
